<?xml version="1.0"?>
<package format="2">
  <name>dialogflow</name>
  <version>0.0.0</version>
  <description>The dialogflow package</description>
  <maintainer email="eddie@todo.todo">eddie</maintainer>
  <license>EDI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
